# prismoire

./: .gitignore  Cargo.toml  FEDERATION_DEPRECATION_POLICY.md  README.md  dev.toml  dev1.toml  dev2.toml  dev3.toml  flake.nix  justfile  rustfmt.toml  schema.sql
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/.sqlx/: query-0039b5035e091ea49aadb154dccf981e64bcbffbc486d96e7bdef32a44e0962e.json  query-00efa6587f53b10df883f20de929edfc792dfbd650751afee45d4bc9afc3ebe8.json  query-011a0c60fe3b3af074d733fffd1ebc01a510f9c59a8f7e90fdb7dde77d8a8339.json  query-012e0551ff1ef491d984b81c02dc1e8dfc2c8f0b1e48b334a397508b3e8db074.json  query-01608d03e7bd283b1c542b5e9252ed7b5bb8741048a8e24e898937b6b3e74409.json  query-016a0ee98688ff1750d4517d65614bda5869ea82dbd52d8d615ca108e6112386.json  query-01c6c30b1b48660a11317ac3c1b238cf9210dc5a9d00f3a3c0195ad0f5ddc80a.json  query-02172f31aadfe78a0756742dc0ec82d29318fc7b10d120ba867d8968f25c486a.json  query-0253e8dae9feded6fe590dabed421ab5b2691a161ef7ef3210cceec203eec506.json  query-026aae7fefb9450adb380df9a85f282d466cb48b2b742b82995aa234bddebd07.json  query-0296ec35e4daf53cc9c26b7468036eb0dd2c144607ff448705ce97df40c53de6.json  query-0320846f6c708991a94f67b079495b563b14bce2885b3636a41a6128713fffc8.json  query-03d99ef2c9c44fa38d890ca34825fb7e9c3a4c36a6d589c56a44f3fa594fcb5e.json  query-04384cb5cbe4e50364a2fa955c57e34a22829b3b90ca9e646bce8e3c9aad2adf.json  query-046046ff15a55bdb3f3b81421ca863834512acb7a0b8dacae13c9e2b3a764d11.json  query-04c83512251fb49d8b5e71b420528e95d506d0d41c5fb6854642a33e67d1e922.json  query-0535f8fb3fa9118151b9105fb5e73267cd0542f3dc24e496e8ac9c867121ed62.json  query-05511fb48764056513996ca7ae79528456b2c91f44267d879062e9d848eb161b.json  query-05c41b7facf8130ee1edaf67c04aafe9e61668b552eda2a47c99b351424228e3.json  query-06140b86ef9ba55adc19fba1ade096792eed199d3c5f2d7a5ddddba8825e0091.json  query-067697d939b51d494a2157da37a77597a84f402dd35c2b5b4a3e7224fc23d3dd.json  query-06a2f325ead9c6f6a9f9cf12a44e84ddcc504b00a3072815fb7be2a2c84679b2.json  query-06e54ddc7c059a7112cb57562e9ae6f660e2017f6fdc2fe8519105ad6bd0e3dd.json  query-070b1844c630b3c92855381db3c5e65c4628489465052cb877ee7c6b482ebb6d.json  query-072c1e36d63e5814d4b8b833400f8a04b6c9fce788f76d12d269e52cc5493fce.json  query-073565e24b911fdeecb13b8d850afded04408906c112426191d68cf0a0556304.json  query-07e4dab0829e65fe839dd3fd0a2ff9f3cb8535a576cda70a9c490fcb0f328710.json  query-07fa65a77445abad2fbcee3351a45090579476915ddf3cfcdf125bc343b3dcaa.json  query-080ce87907bd84df6cd227d9a3a4e1cc4a78be775c57914bad5d9864230136a6.json  query-0832540c773906c573bd209150966e4c0c9ed2a39f19bb8c64f60aea62ea6f5a.json  query-0834a3c9089f2598aee68dc8e9f2e1f3861ee72c2b00db55506139a3a77867e7.json  query-0961e5fca8aed9157f356e6397b075138c9ffd72d0001b3f5897c2a5ea451789.json  query-0a1aec2eeb11b8a7ddba6ea112054c6440083dcf30ee3fcacf9b8a8abdcc704e.json  query-0a6c9e5d211bfcde49d3de3133ed8c4a979c2cb2e7975655fc78ac00945f5add.json  query-0ad1d99bbaf395af6df41eb973c0639fe68e740a20e94d1fc90a94b04f1b5c37.json  query-0ae00a97bedffacec550b33496b8951706809fdb18e27aab1b099303b9cafe7a.json  query-0af02beaa044e27ca30e86a8d0eef964bd30076ee57920bce4422b20cc6700e0.json  query-0b7785eb06df1e6da993ca2c26943679710537b041034deaeb3daa73cfced419.json  query-0b845d8ef8db15e74bed56406fae68da97b63fc3ef4879c6fefcbb5687e9e16a.json  query-0c9660cf520f42de8abd8dc62fd06dc43cb7e5cc51bc53387f2cacb4d53cbb60.json  (+681 more)
server/migrations/: 20260326210332_create_users.sql  20260326210333_create_credentials.sql  20260326210334_create_sessions.sql  20260326210335_create_trust_edges.sql  20260326210336_create_invites.sql  20260326210337_create_areas.sql  20260326210337_create_topics.sql  20260326210338_create_threads.sql  20260326210339_create_posts.sql  20260326210340_create_area_admin_log.sql  20260326210340_create_topic_admin_log.sql  20260326210341_create_auth_challenges.sql  20260326210342_add_display_name_skeleton.sql  20260326210343_add_discoverable_challenge_type.sql  20260326210344_add_user_id_to_auth_challenges.sql  20260326210345_add_role_to_users.sql  20260326210346_add_slug_to_areas.sql  20260326210346_add_slug_to_topics.sql  20260326210347_create_signing_keys.sql  20260326210348_update_posts_revision_model.sql  20260326210349_create_post_revisions.sql  20260401045844_rename_areas_to_rooms.sql  20260402052840_create_admin_log.sql  20260402052841_add_public_to_rooms.sql  20260402052842_remove_pinned_from_threads.sql  20260402052843_invite_links_multi_use.sql  20260402052844_rename_vouch_to_trust.sql  20260408050159_denormalize_thread_activity.sql  20260408050204_create_thread_recent_repliers.sql  20260408054329_drop_redundant_repliers_index.sql  20260409004054_replace_posts_thread_index.sql  20260409051240_create_user_settings.sql  20260409213455_rename_block_to_distrust.sql  20260409223756_drop_weight_expires_from_trust_edges.sql  20260411002958_create_csp_reports.sql  20260413053001_simplify_rooms.sql  20260414202849_create_reports.sql  20260415174742_ban_suspend_system.sql  20260422220921_add_deleted_at_to_users.sql  20260423035029_add_delete_user_action_and_room_deleted_at.sql  (+68 more)
server/src/: admin.rs  admin_config.rs  admin_federation.rs  admin_overview.rs  admin_routes.rs  admin_watchlists.rs  area_name.rs  areas.rs  attachments.rs  auth.rs  csp_report.rs  display_name.rs  error.rs  favorites.rs  instance_config.rs  invites.rs  lib.rs  main.rs  metrics.rs  middleware.rs  posts.rs  privacy.rs  rate_limit.rs  reports.rs  room_name.rs  rooms.rs  search.rs  session.rs  settings.rs  setup.rs  signed.rs  signing.rs  state.rs  test_support.rs  threads.rs  topic_name.rs  topics.rs  trust.rs  trust_tests.rs  users.rs  (+1 more)
server/tests/: admin_config.rs  admin_federation_routes.rs  attachments.rs  federation_attachments.rs  federation_attachments_fetch.rs  federation_bootstrap.rs  federation_content.rs  federation_edges.rs  federation_frontier.rs  federation_gossip.rs  federation_handshake.rs  federation_harness.rs  federation_hydration.rs  federation_moves.rs  federation_peering.rs  federation_phase10_1.rs  federation_phase10_1b.rs  (+29 more)
(+326 files in other folders)
