[workspace]
members = ["server", "cli", "config", "bench"]
resolver = "3"

[workspace.dependencies]
prismoire-config = { path = "config" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = "1"
