[package]
name = "prismoire"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prismoire"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
prismoire-config = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
