[package]
name = "prismoire-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
governor = "0.10"
http = "1"
prismoire-config = { workspace = true }
quick_cache = "0.6"
rand = { workspace = true }
serde = { workspace = true }
subtle = "2"
serde_json = "1"
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1"
unicode-security = "0.1"
unicode-segmentation = "1"
tower_governor = { version = "0.8", features = ["axum"] }
url = "2"
uuid = { workspace = true, features = ["v4", "serde"] }
# conditional-ui: enables discoverable credentials for passkey autofill
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }

[features]
# Mounts test-only auth bypass handlers (POST /test/setup-admin and
# POST /test/signup-as) for integration tests. NEVER enable in release
# builds — these routes create users and mint sessions without any
# WebAuthn ceremony. See server/src/test_support.rs and docs/handler_tests.md.
test-auth = []

[dev-dependencies]
# `tower::ServiceExt::oneshot` drives the Axum router in-process from
# integration tests without binding to a TCP port.
tower = { version = "0.5", features = ["util"] }
# `BodyExt::collect` to materialise response bodies for assertions.
http-body-util = "0.1"

# Integration tests under `server/tests/` exercise real HTTP handlers
# through the test-only `/test/*` bypass routes mounted by the
# `test-auth` feature. Each test file starts with
# `#![cfg(feature = "test-auth")]` so it compiles to an empty crate when
# the feature is off — `cargo test -p prismoire-server` then runs the
# unit tests only, and CI's `--features test-auth` pulls them in. New
# integration tests get the same cfg gate and require no Cargo.toml
# entry. See docs/handler_tests.md.
