[package]
name = "prismoire-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
governor = "0.10"
http = "1"
# Image decode/encode for attachment uploads (docs/attachments.md §3).
# Default features cover PNG/JPEG; webp is pulled in for header dimensions
# and lossless support, but lossy WebP re-encode goes through the `webp`
# crate because `image`'s built-in encoder is lossless-only as of 0.25.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Magic-byte MIME detection — first stage of the two-stage classifier
# (docs/attachments.md §3 step 2).
infer = { version = "0.16", default-features = false }
prismoire-config = { workspace = true }
quick_cache = "0.6"
rand = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
subtle = "2"
serde_json = "1"
# SipHash-2-4 primitive for the `prismoire-bloom-v1` frontier filter
# family (docs/federation-protocol.md §8.2). The keyed constructor
# (`SipHasher24::new_with_keys`) is the load-bearing API; we keep the
# whole bloom-filter wire format and bit-ordering in-house (see
# `server/src/federation/bloom.rs`) so no off-the-shelf bloom crate
# can drift from the spec.
siphasher = "1"
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-normalization = "0.1"
unicode-security = "0.1"
unicode-segmentation = "1"
tower_governor = { version = "0.8", features = ["axum"] }
url = "2"
uuid = { workspace = true, features = ["v4", "serde"] }
# Lossy WebP re-encode for attachment uploads (docs/attachments.md §3 step 3.4).
# `image`'s WebP encoder is lossless-only as of 0.25; a lossless re-encode
# of a lossy 1600 px input frequently busts the 500 KiB cap.
webp = "0.3"
# conditional-ui: enables discoverable credentials for passkey autofill
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
# ZIP archive writer for the GDPR attachments export
# (`GET /api/me/export/attachments`). The default features pull in
# deflate; we don't need encryption or other compression methods.
zip = { version = "2", default-features = false, features = ["deflate"] }
pulldown-cmark = { version = "0.13.4", default-features = false }

[features]
# Mounts test-only auth bypass handlers (POST /test/setup-admin and
# POST /test/signup-as) for integration tests. NEVER enable in release
# builds — these routes create users and mint sessions without any
# WebAuthn ceremony. See server/src/test_support.rs and docs/handler_tests.md.
test-auth = []

[dev-dependencies]
# `tower::ServiceExt::oneshot` drives the Axum router in-process from
# integration tests without binding to a TCP port.
tower = { version = "0.5", features = ["util"] }
# `BodyExt::collect` to materialise response bodies for assertions.
http-body-util = "0.1"

# Integration tests under `server/tests/` exercise real HTTP handlers
# through the test-only `/test/*` bypass routes mounted by the
# `test-auth` feature. Each test file starts with
# `#![cfg(feature = "test-auth")]` so it compiles to an empty crate when
# the feature is off — `cargo test -p prismoire-server` then runs the
# unit tests only, and CI's `--features test-auth` pulls them in. New
# integration tests get the same cfg gate and require no Cargo.toml
# entry. See docs/handler_tests.md.
